# paradedb-django

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-test.yml  deploy-docs.yml  deploy-documentation-v2  lint.yml  publish-package.yml
aggregations/: index.html
changelog/: index.html
docs/: aggregations.md  changelog.md  expressions.md  extension.md  getting-started.md  index.md  indexes.md  lookups.md  settings.md  tokenizers.md  utilities.md
expressions/: index.html
extension/: index.html
getting-started/: index.html
indexes/: index.html
lookups/: index.html
search/: search_index.json
settings/: index.html
src/example/ecommerce/: apps.py  models.py  urls.py  views.py
src/example/ecommerce/migrations/: 0001_initial.py  0002_add_user_bm25_idx.py
src/example/ecommerce/templates/: product_list.html
src/example/example/: asgi.py  settings.py  urls.py  wsgi.py
src/example/scripts/: import_product.py
src/paradedb/: __init__.py  aggregates.py  apps.py  cast.py  expressions.py  extension.py  indexes.py  lookups.py  monkey_patch.py  settings.py  sql.py  tokenizers.py  utils.py
tests/: test_aggregations.py  test_expressions.py  test_lookups.py
tokenizers/: index.html
utilities/: index.html
